

                              KijiMR Release Notes

Version 1.2.1
  * KIJIMR-242. Fix NPE on region servers with missing timestamp.

Version 1.1.1
  * SCHEMA-234. Bugfix: --lib argument cannot process "." as a directory name.
  * SCHEMA-485. Add profiling pointcuts for HBase reads/writes.

Version 1.1.0
  * KIJIMR-227. HFileLoader cannot use HBaseKijiTable.getHTable() anymore.
  * KIJIMR-226. Update dependency on internal HBaseKijiTable.getHTable().

Version 1.0.2
  * KIJIMR-222. Support for profiling. Use enable-profiling.sh in the BentoBox
      to switch to a profiling-enabled jar.
  * KIJIMR-219. Support for CDH 4.3.

Version 1.0.1
  * KIJIMR-215. Fix bug deserializing AvroKVRecordKeyValueStore instances.
  * KIJIMR-210. All calls to Kiji.Factory.open() now allow parameterization
      via the current Configuration object and through CLI "-Dprop=val" flags.
  * KIJIMR-182. Add basic maven archetype for KijiMR-based projects.

Version 1.0.0
  * Added stability annotations to all public/framework classes.
  * KIJIMR-121. KeyValueStoreConfiguration's constructors have been
      made private. The static factory method createInConfiguration()
      can now be used to create KeyValueStoreConfigurations.
  * KIJIMR-209. MapReduceJobOutput constructors are now package private
      and accessible via org.kiji.mapreduce.output.MapReduceJobOutputs
      static methods.
  * KIJIMR-205. KijiTableKeyValueStore now uses a KijiRowKeyComponents
      object for its key. The static method getTableForReader() is no
      longer required and has been removed.
  * KIJIMR-208. Buffer writes to Kiji tables coming from MapReduce jobs.
  * KIJIMR-204. Adds time range metadata to Kiji-generated HFiles. This
      fixes a NPE in HBase 0.94.2.
  * KIJIMR-199. Adds an InMemoryMapKeyValueStore. This KVStore can be
      used for passing small amounts of information to KijiProducers,
      KijiGatherers, etc.
  * KIJIMR-104. Bulk loads can now load either a full directory or the